# aoc_2021_python

./: .gitignore  all_days.py  latest.py  pyproject.toml  run_day.py
assignments/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
timing/: pyproject.toml
timing/timing/: timing.py
