[tool.poetry]
name = "aoc_2021_python"
version = "0.1.0"
description = ""
authors = ["leiver"]

[tool.poetry.dependencies]
python = "^3.8"
more-itertools = "^8.12.0"
timing = {path = "timing"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
