[tool.poetry]
name = "timing"
version = "0.1.0"
description = ""
authors = ["Leiv Erik Rosseland <leiv-erik.rosseland@spk.no>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
